refactor: centraliza autorizacao de carteiras e reforca regras de acesso