@@ -3,16 +3,19 @@ package com.financeiro.backend.features.transaction.service.impl;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.financeiro.backend.common.exception.ResourceNotFoundException;
 import com.financeiro.backend.features.auth.entity.User;
 import com.financeiro.backend.features.auth.repository.UserRepository;
 import com.financeiro.backend.features.category.entity.Category;
+import com.financeiro.backend.features.category.enums.CategoryType;
 import com.financeiro.backend.features.category.repository.CategoryRepository;
+import com.financeiro.backend.features.finance.service.FinancialService;
 import com.financeiro.backend.features.transaction.dto.request.CreateTransactionRequest;
 import com.financeiro.backend.features.transaction.dto.request.UpdateTransactionRequest;
 import com.financeiro.backend.features.transaction.dto.response.TransactionResponse;
@@ -22,12 +25,8 @@ import com.financeiro.backend.features.transaction.mapper.TransactionMapper;
 import com.financeiro.backend.features.transaction.repository.TransactionRepository;
 import com.financeiro.backend.features.transaction.service.TransactionService;
 import com.financeiro.backend.features.wallet.entity.Wallet;
-import com.financeiro.backend.features.wallet.entity.WalletMember;
-import com.financeiro.backend.features.wallet.enums.WalletPermission;
-import com.financeiro.backend.features.wallet.repository.WalletMemberRepository;
 import com.financeiro.backend.features.wallet.repository.WalletRepository;
-import com.financeiro.backend.features.finance.service.FinancialService;
-import org.springframework.transaction.annotation.Transactional;
+import com.financeiro.backend.features.wallet.service.WalletAccessService;
 
 @Service
 public class TransactionServiceImpl implements TransactionService {
@@ -37,9 +36,6 @@ public class TransactionServiceImpl implements TransactionService {
 
     @Autowired
     private WalletRepository walletRepository;
-    
-    @Autowired
-    private WalletMemberRepository walletMemberRepository;
 
     @Autowired
     private CategoryRepository categoryRepository;
@@ -49,45 +45,23 @@ public class TransactionServiceImpl implements TransactionService {
 
     @Autowired
     private TransactionMapper mapper;
-    
+
     @Autowired
     private FinancialService financialService;
 
+    @Autowired
+    private WalletAccessService walletAccessService;
+
     @Override
+    @Transactional
     public TransactionResponse insert(UUID currentUserId, CreateTransactionRequest request) {
-        Wallet wallet = walletRepository.findById(request.getWalletId())
-                .orElseThrow(() -> new ResourceNotFoundException("Carteira não encontrada com ID: " + request.getWalletId()));
+        Wallet wallet = findWallet(request.getWalletId(), "Carteira não encontrada com ID: ");
+        walletAccessService.requireTransactionEdit(wallet, currentUserId);
 
-        checkEditPermission(wallet, currentUserId);
-        
-        Wallet destinationWallet = null;
-        if (request.getType() == TransactionType.TRANSFER) {
-            if (request.getDestinationWalletId() == null) {
-                throw new IllegalArgumentException("Carteira de destino é obrigatória para transferências.");
-            }
-            if (request.getWalletId().equals(request.getDestinationWalletId())) {
-                throw new IllegalArgumentException("A carteira de origem e destino não podem ser as mesmas.");
-            }
-            destinationWallet = walletRepository.findById(request.getDestinationWalletId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Carteira de destino não encontrada com ID: " + request.getDestinationWalletId()));
-                    
-            // Você precisa ter permissão de edição na origem. E na destino? Pode ser que não, mas por segurança exigiremos permissão.
-            checkEditPermission(destinationWallet, currentUserId);
-        }
-
-        Category category = categoryRepository.findById(request.getCategoryId())
-                .orElseThrow(() -> new ResourceNotFoundException("Categoria não encontrada com ID: " + request.getCategoryId()));
-
-        // Validação Categoria x TransactionType
-        if (request.getType() == TransactionType.INCOME && category.getType() != com.financeiro.backend.features.category.enums.CategoryType.INCOME) {
-            throw new IllegalArgumentException("Receitas devem usar categorias do tipo INCOME.");
-        }
-        if (request.getType() == TransactionType.EXPENSE && category.getType() != com.financeiro.backend.features.category.enums.CategoryType.EXPENSE) {
-            throw new IllegalArgumentException("Despesas devem usar categorias do tipo EXPENSE.");
-        }
-        if (request.getType() == TransactionType.TRANSFER && category.getType() != com.financeiro.backend.features.category.enums.CategoryType.TRANSFER) {
-            throw new IllegalArgumentException("Transferências devem usar categorias do tipo TRANSFER.");
-        }
+        Wallet destinationWallet = resolveDestinationWalletForCreate(request, currentUserId, wallet);
+        Category category = findCategory(request.getCategoryId());
+        validateCategoryForWallet(category, wallet);
+        validateCategoryType(category, request.getType());
 
         User createdBy = userRepository.findById(currentUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("Usuário criador não encontrado."));
@@ -101,100 +75,68 @@ public class TransactionServiceImpl implements TransactionService {
         transaction.setUpdatedAt(LocalDateTime.now());
 
         Transaction saved = repository.save(transaction);
-        
-        // Aplicar alterações financeiras
-        if (saved.getType() == TransactionType.INCOME) {
-            financialService.applyIncome(wallet, saved, createdBy);
-        } else if (saved.getType() == TransactionType.EXPENSE) {
-            financialService.applyExpense(wallet, saved, createdBy);
-        } else if (saved.getType() == TransactionType.TRANSFER) {
-            financialService.applyTransfer(wallet, destinationWallet, saved, createdBy);
-        }
-        
+        applyFinancialImpact(saved, createdBy);
+
         return mapper.toResponse(saved);
     }
 
     @Override
     public List<TransactionResponse> listByWallet(UUID walletId, UUID currentUserId) {
-        Wallet wallet = walletRepository.findById(walletId)
-                .orElseThrow(() -> new ResourceNotFoundException("Carteira não encontrada com ID: " + walletId));
-                
-        checkViewPermission(wallet, currentUserId);
-        
-        return repository.findAll().stream()
-                .filter(t -> t.getWallet().getId().equals(walletId))
+        Wallet wallet = findWallet(walletId, "Carteira não encontrada com ID: ");
+        walletAccessService.requireView(wallet, currentUserId);
+
+        return repository.findByWalletIdOrderByTransactionDateDesc(walletId).stream()
                 .map(mapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public TransactionResponse searchById(UUID id, UUID currentUserId) {
         Transaction transaction = findEntityById(id);
-        checkViewPermission(transaction.getWallet(), currentUserId);
+        walletAccessService.requireView(transaction.getWallet(), currentUserId);
         return mapper.toResponse(transaction);
     }
 
     @Override
     @Transactional
     public TransactionResponse alter(UUID id, UUID currentUserId, UpdateTransactionRequest request) {
-        Transaction oldTransaction = findEntityById(id);
-        
-        checkEditPermission(oldTransaction.getWallet(), currentUserId);
+        Transaction transaction = findEntityById(id);
+        walletAccessService.requireTransactionEdit(transaction.getWallet(), currentUserId);
 
-        Category category = oldTransaction.getCategory();
-        if (request.getCategoryId() != null) {
-            category = categoryRepository.findById(request.getCategoryId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Categoria não encontrada com ID: " + request.getCategoryId()));
-        }
-        
-        // Validar Categoria x TransactionType (novo)
-        TransactionType newType = request.getType() != null ? request.getType() : oldTransaction.getType();
-        if (newType == TransactionType.INCOME && category.getType() != com.financeiro.backend.features.category.enums.CategoryType.INCOME) {
-            throw new IllegalArgumentException("Receitas devem usar categorias do tipo INCOME.");
-        }
-        if (newType == TransactionType.EXPENSE && category.getType() != com.financeiro.backend.features.category.enums.CategoryType.EXPENSE) {
-            throw new IllegalArgumentException("Despesas devem usar categorias do tipo EXPENSE.");
-        }
-        if (newType == TransactionType.TRANSFER && category.getType() != com.financeiro.backend.features.category.enums.CategoryType.TRANSFER) {
-            throw new IllegalArgumentException("Transferências devem usar categorias do tipo TRANSFER.");
+        // Uma transferência altera duas carteiras. Para editar/reverter com segurança,
+        // o usuário também precisa continuar com permissão de edição no destino antigo.
+        if (transaction.getType() == TransactionType.TRANSFER && transaction.getDestinationWallet() != null) {
+            walletAccessService.requireTransactionEdit(transaction.getDestinationWallet(), currentUserId);
         }
 
-        // Criar clone da transação antiga antes de alterar para reversão
-        Transaction oldTransactionClone = new Transaction();
-        oldTransactionClone.setId(oldTransaction.getId());
-        oldTransactionClone.setWallet(oldTransaction.getWallet());
-        oldTransactionClone.setDestinationWallet(oldTransaction.getDestinationWallet());
-        oldTransactionClone.setCategory(oldTransaction.getCategory());
-        oldTransactionClone.setType(oldTransaction.getType());
-        oldTransactionClone.setAmount(oldTransaction.getAmount());
+        Transaction oldTransactionSnapshot = snapshotForFinancialReversal(transaction);
 
-        Transaction transaction = oldTransaction;
-        transaction.setCategory(category);
-        
-        if (newType == TransactionType.TRANSFER) {
-            if (request.getDestinationWalletId() != null) {
-                if (transaction.getWallet().getId().equals(request.getDestinationWalletId())) {
-                    throw new IllegalArgumentException("A carteira de origem e destino não podem ser as mesmas.");
-                }
-                Wallet dest = walletRepository.findById(request.getDestinationWalletId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Carteira destino não encontrada."));
-                checkEditPermission(dest, currentUserId);
-                transaction.setDestinationWallet(dest);
-            } else if (transaction.getDestinationWallet() == null) {
-                 throw new IllegalArgumentException("Transferências exigem uma carteira de destino.");
-            }
-        } else {
-             transaction.setDestinationWallet(null);
-        }
+        TransactionType newType = request.getType() != null ? request.getType() : transaction.getType();
+        Category category = request.getCategoryId() != null
+                ? findCategory(request.getCategoryId())
+                : transaction.getCategory();
+
+        validateCategoryForWallet(category, transaction.getWallet());
+        validateCategoryType(category, newType);
+
+        Wallet destinationWallet = resolveDestinationWalletForUpdate(
+                transaction,
+                request,
+                newType,
+                currentUserId
+        );
 
         mapper.updateEntityFromDto(request, transaction);
+        transaction.setCategory(category);
+        transaction.setDestinationWallet(destinationWallet);
         transaction.setUpdatedAt(LocalDateTime.now());
+
         Transaction updated = repository.save(transaction);
-        
+
         User updater = userRepository.findById(currentUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado."));
-        financialService.updateTransaction(oldTransactionClone, updated, updater);
-        
+        financialService.updateTransaction(oldTransactionSnapshot, updated, updater);
+
         return mapper.toResponse(updated);
     }
 
@@ -202,37 +144,152 @@ public class TransactionServiceImpl implements TransactionService {
     @Transactional
     public void remove(UUID id, UUID currentUserId) {
         Transaction transaction = findEntityById(id);
-        checkEditPermission(transaction.getWallet(), currentUserId);
-        
+        walletAccessService.requireTransactionEdit(transaction.getWallet(), currentUserId);
+
+        if (transaction.getType() == TransactionType.TRANSFER && transaction.getDestinationWallet() != null) {
+            walletAccessService.requireTransactionEdit(transaction.getDestinationWallet(), currentUserId);
+        }
+
         User user = userRepository.findById(currentUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("Usuário não encontrado."));
-                
+
         financialService.deleteTransaction(transaction, user);
         repository.delete(transaction);
+    }
+
+    private Wallet resolveDestinationWalletForCreate(
+            CreateTransactionRequest request,
+            UUID currentUserId,
+            Wallet originWallet
+    ) {
+        if (request.getType() != TransactionType.TRANSFER) {
+            if (request.getDestinationWalletId() != null) {
+                throw new IllegalArgumentException("Carteira de destino só pode ser informada em transferências.");
+            }
+            return null;
+        }
+
+        if (request.getDestinationWalletId() == null) {
+            throw new IllegalArgumentException("Carteira de destino é obrigatória para transferências.");
+        }
+
+        ensureDifferentWallets(originWallet.getId(), request.getDestinationWalletId());
+
+        Wallet destinationWallet = findWallet(
+                request.getDestinationWalletId(),
+                "Carteira de destino não encontrada com ID: "
+        );
+        walletAccessService.requireTransactionEdit(destinationWallet, currentUserId);
+        return destinationWallet;
+    }
+
+    private Wallet resolveDestinationWalletForUpdate(
+            Transaction transaction,
+            UpdateTransactionRequest request,
+            TransactionType newType,
+            UUID currentUserId
+    ) {
+        if (newType != TransactionType.TRANSFER) {
+            if (request.getDestinationWalletId() != null) {
+                throw new IllegalArgumentException("Carteira de destino só pode ser informada em transferências.");
+            }
+            return null;
+        }
+
+        Wallet destinationWallet = transaction.getDestinationWallet();
+
+        if (request.getDestinationWalletId() != null) {
+            ensureDifferentWallets(transaction.getWallet().getId(), request.getDestinationWalletId());
+            destinationWallet = findWallet(
+                    request.getDestinationWalletId(),
+                    "Carteira de destino não encontrada com ID: "
+            );
+        }
+
+        if (destinationWallet == null) {
+            throw new IllegalArgumentException("Transferências exigem uma carteira de destino.");
+        }
+
+        walletAccessService.requireTransactionEdit(destinationWallet, currentUserId);
+        return destinationWallet;
+    }
+
+    private void ensureDifferentWallets(UUID originWalletId, UUID destinationWalletId) {
+        if (originWalletId.equals(destinationWalletId)) {
+            throw new IllegalArgumentException("A carteira de origem e destino não podem ser as mesmas.");
+        }
+    }
+
+    private Category findCategory(UUID categoryId) {
+        return categoryRepository.findById(categoryId)
+                .orElseThrow(() -> new ResourceNotFoundException("Categoria não encontrada com ID: " + categoryId));
+    }
+
+    private void validateCategoryForWallet(Category category, Wallet wallet) {
+        if (category == null) {
+            throw new IllegalArgumentException("Categoria é obrigatória.");
+        }
+
+        if (Boolean.TRUE.equals(category.getSystemCategory()) && category.getWallet() == null) {
+            return;
+        }
+
+        if (category.getWallet() == null
+                || category.getWallet().getId() == null
+                || !category.getWallet().getId().equals(wallet.getId())) {
+            throw new AccessDeniedException("A categoria informada não pertence à carteira da transação.");
+        }
+    }
+
+    private void validateCategoryType(Category category, TransactionType transactionType) {
+        CategoryType expectedType = switch (transactionType) {
+            case INCOME -> CategoryType.INCOME;
+            case EXPENSE -> CategoryType.EXPENSE;
+            case TRANSFER -> CategoryType.TRANSFER;
+        };
+
+        if (category.getType() != expectedType) {
+            throw new IllegalArgumentException(switch (transactionType) {
+                case INCOME -> "Receitas devem usar categorias do tipo INCOME.";
+                case EXPENSE -> "Despesas devem usar categorias do tipo EXPENSE.";
+                case TRANSFER -> "Transferências devem usar categorias do tipo TRANSFER.";
+            });
+        }
+    }
+
+    private void applyFinancialImpact(Transaction transaction, User user) {
+        if (transaction.getType() == TransactionType.INCOME) {
+            financialService.applyIncome(transaction.getWallet(), transaction, user);
+        } else if (transaction.getType() == TransactionType.EXPENSE) {
+            financialService.applyExpense(transaction.getWallet(), transaction, user);
+        } else if (transaction.getType() == TransactionType.TRANSFER) {
+            financialService.applyTransfer(
+                    transaction.getWallet(),
+                    transaction.getDestinationWallet(),
+                    transaction,
+                    user
+            );
+        }
+    }
+
+    private Transaction snapshotForFinancialReversal(Transaction source) {
+        Transaction snapshot = new Transaction();
+        snapshot.setId(source.getId());
+        snapshot.setWallet(source.getWallet());
+        snapshot.setDestinationWallet(source.getDestinationWallet());
+        snapshot.setCategory(source.getCategory());
+        snapshot.setType(source.getType());
+        snapshot.setAmount(source.getAmount());
+        return snapshot;
+    }
+
+    private Wallet findWallet(UUID walletId, String messagePrefix) {
+        return walletRepository.findById(walletId)
+                .orElseThrow(() -> new ResourceNotFoundException(messagePrefix + walletId));
     }
 
     private Transaction findEntityById(UUID id) {
         return repository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Transação não encontrada com o ID: " + id));
-    }
-    
-    private void checkViewPermission(Wallet wallet, UUID currentUserId) {
-        if (wallet.getOwner().getId().equals(currentUserId)) return;
-        
-        boolean isMember = walletMemberRepository.existsByWalletIdAndUserId(wallet.getId(), currentUserId);
-        if (!isMember) {
-            throw new SecurityException("Usuário não tem permissão para visualizar transações desta carteira.");
-        }
-    }
-    
-    private void checkEditPermission(Wallet wallet, UUID currentUserId) {
-        if (wallet.getOwner().getId().equals(currentUserId)) return;
-        
-        WalletMember member = walletMemberRepository.findByWalletIdAndUserId(wallet.getId(), currentUserId)
-                .orElseThrow(() -> new SecurityException("Usuário não tem permissão nesta carteira."));
-                
-        if (member.getPermission() != WalletPermission.EDITOR) {
-            throw new SecurityException("Usuário não tem permissão de EDITOR para modificar transações.");
-        }
     }
 }
